IBX-5743: Fixed header z-index in edit mode

--- a/src/bundle/Resources/public/scss/_edit-header.scss
+++ b/src/bundle/Resources/public/scss/_edit-header.scss
@@ -8,7 +8,7 @@
     border-top-left-radius: $ibexa-border-radius;
     border-top-right-radius: $ibexa-border-radius;
     transition: all $ibexa-admin-transition-duration $ibexa-admin-transition, border-bottom-width 0;
-    z-index: 2;
+    z-index: 1500;
 
     &__container {
         display: flex;
